[tool.poetry]
name = "levi"
version = "0.2.0"
description = "Delta Lake helper methods"
authors = ["Matthew Powers <matthewkevinpowers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
deltalake = { version = "^0.9.0", extras = ["pandas"] }


[tool.poetry.dev-dependencies]
beavis = "0.3.0"
pytest = "7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
